# ifm_contrib

./: .gitignore  LICENSE  README.md  __init__.py  credits.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  python-39.yml
c/: __init__.py
c/files/: __init__.py
c/simulator/: Simulator.py
colormaps/: __init__.py  feflow_classic.xml  feflow_white_red.xml  readme.md
contrib_lib/: __init__.py  bdgt.py  content.py  content_pandas.py  dfe.py  dfe_pandas.py  diag.py  hist.py  hist_pandas.py  mesh.py  mesh_geopandas.py  mesh_pandas.py  obs.py  obs_geopandas.py  particles.py  plot.py  plot_folium.py  plot_geopandas.py  sel.py  sel_pandas.py  settings.py  settings_pandas.py  simulator.py  simulator_pandas.py  ts.py  ts_pandas.py  user.py  user_pandas.py
doc/: ifm_contrib.colormaps.html
doc/Notebooks/: FEFLOW74_NewFeatures_Ifm.ipynb  doc.c.plot.ipynb  getting_started.ipynb  pandas-fringes-and-isolines.ipynb  pandas-histories-and-ts.ipynb  pandas-mesh-and-selections.ipynb  pandas-observation_points.ipynb  plotting - introduction.ipynb  plotting - using feflow colormaps.ipynb  sample-shape.dbf  sample-shape.prj  sample-shape.sbn  sample-shape.sbx  sample-shape.shp  sample-shape.shx  time series.ipynb
doc/_sources/: ifm_contrib.colormaps.rst.txt  ifm_contrib.contrib_lib.rst.txt
doc/_static/: documentation_options.js
doc/sphinx/: Makefile  make.bat
docs/: .buildinfo  api.html  genindex.html  ifm_contrib.colormaps.html  ifm_contrib.contrib_lib.html  ifm_contrib.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/_sources/: ifm_contrib.rst.txt  index.rst.txt  tutorials.rst.txt
ifm_contrib/: __init__.py
ifm_contrib/c/: __init__.py
ifm_contrib/colormaps/: __init__.py  feflow_black_blue.xml  feflow_black_green.xml  feflow_black_red.xml  feflow_blue_green_red.xml  feflow_blue_green_yellow_red.xml  feflow_clear_red.xml  (+7 more)
unittests/: conftest.py  coverage.bat  test_baseifm.py  test_classicifm.py  test_hist_pandas.py  test_mesh.py  test_mesh_geopandas.py  test_mesh_pandas2.py  test_obs_geopandas.py  test_plot.py  test_plot_geopandas.py  test_sel.py  test_ts.py  test_ts_pandas.py
(+44 files in other folders)
