[build-system]
requires = ['setuptools', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = "ifm_contrib"
dynamic = ["version"]
description = "*ifm_contrib* is an Open-Source Extension of the IFM, the Python API of the groundwater modellierung software [FEFLOW](https://en.wikipedia.org/wiki/FEFLOW) by [DHI](https://www.dhigroup.com)."
authors = [{ name = 'Alexander Renz', email = 'alex.renz@gmx.net' }]
license = { text = "MIT" }
readme = "README.md"
requires-python = '<3.12'

[project.urls]
# "Documentation" = 'TODO'
"Bug Tracker" = 'https://github.com/red5alex/ifm_contrib/issues'
"Source Code" = 'https://github.com/red5alex/ifm_contrib'

[tool.setuptools.packages.find]
where = ["."]
include = ["ifm_contrib*"]
